# sp-920

./: CMakeLists.txt  README.md
boards/sp-920/: CMakeLists.txt  board.c  board.h  pinmux.c  pinmux.h  sp-920.yaml
src/: apm_uart_test.c  apm_uart_test.h  clock_test.c  clock_test.h  common.c  common.h  common_cfg.h  ethernetif.c  ethernetif.h  ksz8463.c  ksz8463.h  lwip.c  lwip.h  lwipopts.h  lwipopts_app.h  mac_eeprom.c  mac_eeprom.h  main.c  march_test.c  march_test.h  netconf.c  netconf.h  ram_test.c  ram_test.h  read_mac.c  read_mac.h  rs485.c  rs485.h  sys_arch.c
src/app/: tcp_echo.c  tcp_echo.h
src/arch/: cc.h  sys_arch.h
